<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2016 Michael Sladoje and Mike Schälchli. All Rights Reserved.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>
    <string name="app_name">Face Recognition</string>
    <string name="training">Training</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>

    <string name="date_pattern">EEE, d MMM yyyy hh:mm:ss a</string>
    <string name="pass_code_wrong">Pass Code Wrong!</string>
    <string name="auth_fail">Authentication Fail!</string>
    <string name="one_time_pass_code">1234</string>
    <string name="user_label">Name</string>
    <string name="save_text">Save</string>
    <string name="email_label">Email</string>
    <string name="change_admin_password">Change Admin Password</string>
    <string name="time_out_label">Time Out Duration</string>
    <string name="checkInDatePattern">HH:mm</string>
    <string name="dailyRecordFormat">ddMMyyyy</string>
    <string name="password_label">Old Password</string>
    <string name="new_password_label">New Password</string>
    <string name="out_format">dd MMMM yyyy</string>
    <string name="in_format">dd/MM/yyyy</string>
    <string name="report_out_pattern">dd MMMM</string>
</resources>
