<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:id="@+id/close"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_close"
        android:tint="@color/errorColor"
        android:layout_gravity="right"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/admin_horizontal_margin"
        android:layout_marginTop="50dp"
        android:hint="@string/new_password_label"
        app:hintTextColor="@color/passCodeColor"
        app:startIconDrawable="@drawable/ic_password"
        app:startIconTint="@color/passCodeColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtnewpassword"
            android:inputType="numberPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColorHint="@color/passCodeColor" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/oldPw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/admin_horizontal_margin"
        android:layout_marginTop="50dp"
        android:hint="@string/password_label"
        app:hintTextColor="@color/passCodeColor"
        app:startIconDrawable="@drawable/ic_password"
        app:startIconTint="@color/passCodeColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtoldpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:textColorHint="@color/passCodeColor" />


    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_marginBottom="30dp"
        android:id="@+id/btnsave"
        android:drawableLeft="@drawable/ic_save"
        style="@style/BtnTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/changepassword"
        android:layout_marginHorizontal="@dimen/admin_horizontal_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:background="@drawable/btnbg"
        android:backgroundTint="@color/successColor"
        android:padding="10dp"
        android:paddingBottom="20dp"
        android:text="@string/save_text"
        android:textColor="@color/colorWhite" />
</LinearLayout>